<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".KotlinViewsActivity">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/kotlin_click_toast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_50"
            android:text="@string/toast" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/kotlin_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_50"
            android:text="@string/list_view" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/kotlin_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_50"
            android:text="@string/recycler_view" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/kotlin_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_50"
            android:hint="@string/enter_the_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/kotlin_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_50"
            android:text="@string/apply" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/kotlin_apply_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_50"
            android:gravity="center"
            android:text="@string/value" />

        <AutoCompleteTextView
            android:id="@+id/autocomplete_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_50"
            android:layout_marginTop="50dp"
            android:layout_marginRight="@dimen/dimen_50"
            android:hint="@string/enter_your_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/kotlin_get_selected_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_50"
            android:text="@string/select" />

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/checked_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_50"
            android:checked="true"
            android:gravity="center"
            android:text="@string/check_the_text" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_50"
            android:max="100"
            android:min="0" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/ratingbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_50"
            android:background="@color/colorPrimary"
            android:numStars="5"
            android:stepSize="0.5"
            android:theme="@style/Widget.AppCompat.RatingBar" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/get_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_50"
            android:text="@string/rating" />
        <Spinner
            android:layout_marginLeft="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_50"
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Switch
            android:id="@+id/switch_item"
            android:text="@string/switch_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_50" />


    </LinearLayout>
</ScrollView>